# holdem_simulator

./: README.md  experiment.ipynb  exploring_when_rounded_to_05_percent.ipynb  main.py  pyproject.toml  tmp.py
data/: rounded_win_prob_for_hole_cards_and_players.pkl  rounded_win_prob_for_hole_cards_and_players_10.pkl  valid_cards_dict.pkl  valid_hole_cards_list.pkl  valid_hole_cards_set.pkl  wins_by_hole_cards_flavor.pkl  wins_by_hole_cards_flavor_10.pkl
src/: active_player.py  aggregate_simulations.py  bet.py  big_blind.py  card.py  community_cards.py  config.py  deck.py  flush.py  four_of_a_kind.py  full_house.py  get_path_for_n_players_aggregated.py  get_rounded_win_prob_for_hole_cards_and_players.py  get_wins_by_hole_cards_flavor_data.py  graph.py  guess_functions.py  guess_result.py  hand.py  hand_type.py  hi_card.py  hole_cards.py  load_wins_by_hole_cards_flavor_df.py  make_dir_if_does_not_exist.py  make_round_to_percent_string.py  make_win_ratio_rounded_down_string.py  n_of_a_kind.py  named_hands.py  pair.py  player_hand.py  players_ahead_of_you.py  plot_builders_mpl.py  plot_builders_plotly.py  plot_data.py  rank.py  save_train_results.py  scaling_constants.py  simulate_and_aggregate.py  simulate_hands.py  small_blind.py  straight.py  (+5 more)
styles/: dgl_stylesheet.mpltstyle
tests/: test_compare_player_hands.py  test_constants.py  test_flush.py  test_four_of_a_kind.py  test_full_house.py  test_hi_card.py  test_pair.py  test_regressions.py  test_straight.py  test_straight_flush.py  test_three_of_a_kind.py  test_two_pair.py  tests_config.py
(+339 files in other folders)
