[tool.poetry]
name = "holdem_simulator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
ipython = "^8.14.0"
ipykernel = "^6.23.3"
nbformat = "^5.9.0"
pytest = "^7.4.0"
numpy = "^1.25.2"
matplotlib = "^3.8.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
